--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@somehow-digital/eslint-config": "^3.0.0",
 		"@somehow-digital/prettier-config": "^2.0.0",
 		"@somehow-digital/typescript-config": "^2.0.0",
+		"@somehow-digital/unocss-preset": "^1.0.1",
 		"@types/node": "^22.8.7",
 		"concurrently": "^9.0.0",
 		"cspell": "^8.7.0",
