--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,3 +1,3 @@
 {
-	"extends": "../../.nuxt/tsconfig.server.json"
+	"extends": ["@somehow-digital/typescript-config/basic", "../../.nuxt/tsconfig.server.json"]
 }
