Adapt codebase for nuxt v4

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"@parcel/watcher",
-			"esbuild"
+			"esbuild",
+			"oxc-resolver"
 		]
 	},
 	"scripts": {
