--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,18 @@
 {
-	"extends": ["@somehow-digital/typescript-config/basic", "./.nuxt/tsconfig.json"]
+	"extends": ["@somehow-digital/typescript-config/basic"],
+	"files": [],
+	"references": [
+		{
+			"path": "./.nuxt/tsconfig.app.json"
+		},
+		{
+			"path": "./.nuxt/tsconfig.server.json"
+		},
+		{
+			"path": "./.nuxt/tsconfig.shared.json"
+		},
+		{
+			"path": "./.nuxt/tsconfig.node.json"
+		}
+	]
 }
