--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
 	"extends": ["@somehow-digital/typescript-config/basic"],
-	"include": ["*.js"],
 	"references": [
 		{
 			"path": "./.nuxt/tsconfig.app.json"
@@ -14,5 +13,6 @@
 		{
 			"path": "./.nuxt/tsconfig.node.json"
 		}
-	]
+	],
+	"include": ["*.js"]
 }
